# urpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
cmake/: urpcConfig.cmake.in
docs/: building.md  client-pool.md  client.md  index.md  server.md  transport-and-ids.md  wire-format.md
docs/urpc/: client.md  index.md  server.md  transport-and-ids.md  wire-format.md
examples/: interceptor_demo.cpp  main.cpp  main_aes.cpp  main_client.cpp  main_client_leak_check.cpp  main_client_leak_check_baseline.cpp  main_client_pool.cpp  main_client_pool_expand.cpp  main_client_stress.cpp  main_client_timeout.cpp  main_inproc_leak_check.cpp  main_load.cpp  main_multi_methods_single_client.cpp  main_multi_methods_stress.cpp  main_ping_inbox.cpp  main_server_mtls.cpp  main_server_multi.cpp
include/urpc/: Client.h  Codec.h  Interceptors.h  OpenSslTransport.h  Server.h  ServerRouter.h  SocketRW.h  Transport.h  UrpcChannel.h  UrpcOptions.h  UrpcSettings.h  UrpcSettingsBuilder.h  UrpcSettingsIO.h  Wire.h
include/urpc/client/: RPCClient.h  RPCClientPool.h
include/urpc/config/: Config.h
include/urpc/connection/: RPCConnection.h
include/urpc/context/: RPCContext.h
include/urpc/crypto/: AppCrypto.h
include/urpc/datatypes/: Frame.h
include/urpc/registry/: RPCMethodRegistry.h
include/urpc/server/: RPCServer.h
include/urpc/transport/: IOOps.h  IRPCStream.h  IRPCStreamFactory.h  TCPStream.h  TCPStreamFactory.h  TlsConfig.h  TlsPeer.h  TlsRpcStream.h  TlsRpcStreamFactory.h
include/urpc/utils/: Endianness.h  Hash.h  Systems.h  Tls.h
src/urpc/client/: RPCClient.cpp  RPCClientPool.cpp
src/urpc/connection/: RPCConnection.cpp
src/urpc/registry/: RPCMethodRegistry.cpp
src/urpc/server/: RPCServer.cpp
src/urpc/transport/: TCPStream.cpp  TlsRpcStream.cpp
tests/: WireBasic.cpp
